Publish eighth draft.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -27,6 +27,7 @@ John Cowan
   <li>Draft #5 published: 2015/11/8</li>
   <li>Draft #6 published: 2015/11/10</li>
   <li>Draft #7 published: 2015/11/23</li>
+  <li>Draft #8 published: 2015/12/17</li>
 </ul>
 
 <h1>Abstract</h1>
