--- a/srfi-128.html
+++ b/srfi-128.html
@@ -29,6 +29,8 @@ John Cowan
   <li>Draft #7 published: 2015/11/23</li>
   <li>Draft #8 published: 2015/12/17</li>
   <li>Draft #9 published: 2015/12/25</li>
+  <li>Draft #9 published: 2015/12/25</li>
+  <li>Draft #10 published: 2016/1/18</li>
 </ul>
 
 <h1>Abstract</h1>
