Publish twelfth draft.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -31,6 +31,7 @@ John Cowan
   <li>Draft #9 published: 2015/12/25</li>
   <li>Draft #10 published: 2016/1/18</li>
   <li>Draft #11 published: 2016/2/6</li>
+  <li>Draft #12 published: 2016/2/14</li>
 </ul>
 
 <h1>Abstract</h1>
