--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <menu>
       <li><a href="srfi-128.html">The SRFI Document</a></li>
       <li><a href="http://srfi-email.schemers.org/srfi-128/">Discussion Archive</a></li>
-      <li>status: <em>draft</em></li>
+      <li>status: <em>final</em></li>
       <li><a href="https://github.com/scheme-requests-for-implementation/srfi-128">Git repo</a></li></menu>
 
     <form class="subscription" method="POST" action="http://www.simplelists.com/subscribe.php">
