Apply changes from John Cowan.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -35,6 +35,10 @@ John Cowan
   <li>Finalized: 2016/2/14</li>
 </ul>
 
+<p><b>Post-finalization note</b>:  Because of the extremely high cost of
+    conforming to the first and third conditions of <code>default-hash</code>,
+    implementers may disregard those conditions and examine only a
+    bounded portion of the argument.</p>
 <h1>Abstract</h1>
 
 <p>
