Add post-finalization note.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -33,6 +33,7 @@ John Cowan
   <li>Draft #11 published: 2016/2/6</li>
   <li>Draft #12 published: 2016/2/14</li>
   <li>Finalized: 2016/2/14</li>
+  <li>Revised to fix errata: 2016/5/14</li>
 </ul>
 
 <p><b>Post-finalization note</b>:  Because of the extremely high cost of
