--- a/srfi-128.html
+++ b/srfi-128.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>SRFI 128: Comparators (reduced)</title>
-    <link rel="stylesheet" href="http://srfi.schemers.org/srfi.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/srfi.css" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
   <div>
 
