--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>SRFI 128: Comparators (reduced)</h1>
     <p class="authors">by John Cowan</p>
-    <p class="status">status: <em>final</em></p>
+    <p class="status">status: <em>final</em> (2016/2/14)</p>
 
     <ul>
       <li><a href="srfi-128.html">The SRFI Document</a></li>
