Include 'replaces' info.  Use SSL/TLS.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <h1>SRFI 128: Comparators (reduced)</h1>
     <p class="authors">by John Cowan</p>
-    <p class="status">status: <em>final</em> (2016/2/14)</p>
+    <p class="status">status: <em>final</em> (2016/2/14)</p><p><span class="replaces">This SRFI is intended to <a href="/srfi-faq.html#replacement">replace</a> <a href="/srfi-114/">SRFI 114</a></span></p>
 
     <ul>
       <li><a href="srfi-128.html">The SRFI Document</a></li>
-      <li><a href="http://srfi-email.schemers.org/srfi-128/">Discussion Archive</a></li>
+      <li><a href="https://srfi-email.schemers.org/srfi-128/">Discussion Archive</a></li>
       <li><a href="https://github.com/scheme-requests-for-implementation/srfi-128">Git repo (on Github)</a></li>
       <li>
-        <a href="mailto:srfi-128@srfi.schemers.org">srfi-128@<span class="antispam">nospam</span>srfi.schemers.org (subscribers only)</a></li>
+        <a href="mailto:srfi-128@srfi.schemers.org">srfi-128@<span class="antispam">nospam</span>srfi.schemers.org</a> (subscribers only)</li>
       <li>
         <form method="POST" action="https://www.simplelists.com/subscribe.php">
           <div class="title">Subscribe to srfi-128 mailing list</div>
