--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>Comparators (reduced)</title>
-    <link href="/admin.css" rel="stylesheet">
-    <link href="/list.css" rel="stylesheet">
-    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
+    <link href="../srfi-common/admin.css" rel="stylesheet">
+    <link href="../srfi-common/list.css" rel="stylesheet">
+    <link href="../srfi-common/favicon.png" rel="icon" sizes="192x192" type="image/png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/x-mathjax-config">
+     MathJax.Hub.Config({
+       tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+     });
+    </script>
+    <script crossorigin="anonymous" integrity=
+            "sha384-Ra6zh6uYMmH5ydwCqqMoykyf1T/+ZcnOQfFPhDrp2kI4OIxadnhsvvA2vv9A7xYv" src=
+            "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+            type="text/javascript"></script>
   </head>
 
   <body>
@@ -62,4 +71,10 @@
                  value="unsubscribe" >
           <input name="list"
                  type="hidden"
-                 value="srfi-128@srfi.schemers.org" ></form></li></ul></body></html>
+                 value="srfi-128@srfi.schemers.org"></form></li></ul>
+    <h2>Abstract</h2>      <p>This SRFI provides <i>comparators</i>, which
+      bundle a type test predicate, an equality predicate, an ordering
+      predicate, and a hash function (the last two are optional) into a single
+      Scheme object. By packaging these procedures together, they can be
+      treated as a single item for use in the implementation of data
+      structures.</body></html>
