--- a/srfi-128.html
+++ b/srfi-128.html
@@ -34,7 +34,10 @@ John Cowan
   <li>Draft #11 published: 2016/2/6</li>
   <li>Draft #12 published: 2016/2/14</li>
   <li>Finalized: 2016/2/14</li>
-  <li>Revised to fix errata: 2016/5/14</li>
+  <li>Revised to fix errata:
+    <ul>
+      <li>2016/5/14 (Add post-finalization note.)</li>
+      <li>2018/10/9 (Add missing "not.")</li></ul></li>
 </ul>
 
 <p><b>Post-finalization note</b>:  Because of the extremely high cost of
@@ -60,7 +63,7 @@ None at present.
 <p>
 The four procedures above have complex dependencies on one another, and it is inconvenient to have to pass them individually to other procedures that might or might not make use of all of them.  For example, a set implementation by its nature requires only an equality predicate, but if it is implemented using a hash table, an appropriate hash function is also required if the implementation does not provide one; alternatively, if it is implemented using a tree, procedures specifying a total order are required.  By passing a comparator rather than a bare equality predicate, the set implementation can make use of whatever procedures are available and useful to it.
 </p>
-<p>This SRFI is a simplified and enhanced rewrite of <a href="http://srfi.schemers.org/srfi-114/srfi-114.html" target="_blank">SRFI 114</a>, and shares some of its design rationale and all of its acknowledgements.  The largest change is the replacement of the comparison procedure with the ordering procedure.  This allowed most of the special-purpose comparators to be removed.  In addition, many of the more specialized 
+<p>This SRFI is a simplified and enhanced rewrite of <a href="http://srfi.schemers.org/srfi-114/srfi-114.html" target="_blank">SRFI 114</a>, and shares some of its design rationale and all of its acknowledgements.  The largest change is the replacement of the comparison procedure with the ordering procedure.  This allowed most of the special-purpose comparators to be removed.  In addition, many of the more specialized
 procedures, as well as all but one of the syntax forms, have been removed as unnecessary.</p>
 
 <p>Special thanks to Taylan Ulrich Bayırlı/Kammer, whose insistence
@@ -156,7 +159,7 @@ according to <var>car-comparator</var> and the cdrs are equal according
 to <var>cdr-comparator</var>, and <code>#f</code> otherwise.</p></li>
 <li><p>The ordering function first compares the cars of its pairs using
 the equality predicate of <var>car-comparator</var>.  If they are
-equal, then the ordering predicate of <var>car-comparator</var> is 
+not equal, then the ordering predicate of <var>car-comparator</var> is
 applied to the cars and its value is returned.
 Otherwise, the predicate compares the cdrs using
 the equality predicate of <var>cdr-comparator</var>.  If they are not
@@ -176,7 +179,7 @@ This procedure returns comparators whose functions behave as follows:
 <li><p>The type test returns <code>#t</code> if its argument satisfies
 <var>type-test</var> and the elements satisfy the type test predicate
 of <var>element-comparator</var>.</p></li>
-<li><p>The total order defined by the equality and ordering functions 
+<li><p>The total order defined by the equality and ordering functions
 is as follows (known as lexicographic order): </p>
 <ul>
 <li>The empty sequence, as determined by calling <var>empty?</var>,
@@ -480,7 +483,7 @@ returns true, &lt;greater-than&gt; is evaluated and its value returned.
 <h1>Implementation</h1>
 
 
-<p>The <a href="comparators.tar.gz" target="_blank">sample implementation</a> 
+<p>The <a href="comparators.tar.gz" target="_blank">sample implementation</a>
 is found in the repository of this SRFI.  It contains the following files.</p>
 <ul><li><code>comparators-impl.scm</code> - the record type definition and most of the procedures</li>
 <li><code>default.scm</code> - a simple implementation of the default constructor, which should be improved by implementers to handle records and implementation-specific types</li>
@@ -494,7 +497,7 @@ is found in the repository of this SRFI.  It contains the following files.</p>
 </ul>
 
 <h1>Copyright</h1>
-Copyright (C) John Cowan (2015). All Rights Reserved. 
+Copyright (C) John Cowan (2015). All Rights Reserved.
 <p>
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation files (the "Software"),
