Remove obsolete archive.  Link to new archive.
New archive is automatically generated from source files.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -483,7 +483,7 @@ returns true, &lt;greater-than&gt; is evaluated and its value returned.
 <h1>Implementation</h1>
 
 
-<p>The <a href="comparators.tar.gz" target="_blank">sample implementation</a>
+<p>The <a href="srfi-128.tgz" target="_blank">sample implementation</a>
 is found in the repository of this SRFI.  It contains the following files.</p>
 <ul><li><code>comparators-impl.scm</code> - the record type definition and most of the procedures</li>
 <li><code>default.scm</code> - a simple implementation of the default constructor, which should be improved by implementers to handle records and implementation-specific types</li>
