Add missing anchor.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -110,6 +110,7 @@ It is also the programmer's responsibility to ensure that all four procedures pr
 <li><p><a href="#Comparisonpredicates">Comparison predicates</a>: <code>=? &lt;? &gt;? &lt;=? &gt;=?</code></p></li>
 <li><p><a href="#Syntax">Syntax</a>: <code>comparator-if&lt;=&gt;</code></p></li>
 </ul>
+<a name="Predicates">
 <h3>Predicates</h3>
 <p>
 <code>(comparator? </code><em>obj</em><code>)</code>
