--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1>SRFI 128: Comparators (reduced)</h1>
     <p class="authors">by John Cowan</p>
-    <p class="status">status: <em>final</em> (2016/2/14)</p><span class="see-also">See also <a href="/srfi-114/">SRFI 114: Comparators</a>.</span>
+    <p class="status">status: <em>final</em> (2016/2/14)</p><span class="see-also">See also <a href="/srfi-114/">SRFI 114: Comparators</a> and <a href="/srfi-162/">SRFI 162: Comparators sublibrary</a>.</span>
 
     <ul class="info">
       <li><a href="srfi-128.html">The SRFI Document</a></li>
