--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="authors">by John Cowan</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2016-02-14)</p>
-    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=comparison][Comparison]]</p><span class="see-also">See also <a href="/srfi-114/">SRFI 114: Comparators</a> and <a href="/srfi-162/">SRFI 162: Comparators sublibrary</a>.</span>
+    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=comparison">Comparison</a></p><span class="see-also">See also <a href="/srfi-114/">SRFI 114: Comparators</a> and <a href="/srfi-162/">SRFI 162: Comparators sublibrary</a>.</span>
 
     <ul class="info">
       <li><a href="srfi-128.html">The SRFI Document</a></li>
