Add erratum notice.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -37,7 +37,10 @@ John Cowan
   <li>Revised to fix errata:
     <ul>
       <li>2016-05-14 (Add post-finalization note.)</li>
-      <li>2018-10-09 (Add missing "not.")</li></ul></li>
+      <li>2018-10-09 (Add missing "not.")</li>
+      <li>2021-03-29 (Fix arguments to <code>make-comparator</code> in
+	the <a href="#Defaultcomparators">Default comparators</a>
+	section.)</li></ul></li>
 </ul>
 
 <p><b>Post-finalization note</b>:  Because of the extremely high cost of
